# Approximation

./: Approx.cpp  CMakeLists.txt  README.md  SLAE_test.cpp  Vmatrix.h  back_gauss.h  chebishev.h  csr.h  gauss.h  gauss_zeidel.h  gmres.h  head_gauss.h  krylov.h  main.cpp  matrix.h  polynom.h  simple_iteration.h
